tests/fail/fail_pal_transient_locked.tk
// tests/fail/fail_pal_transient_locked.tk

fn main() -> i32 {
    auto buf# = 100
    // Long term borrow bound to variable scope
    auto &ref = &buf#
    
    // Changing buf# violates the immutable lease given to ref
    // The previously implemented TransientClear should NOT clear THIS lock!
    // EXPECT: error[E0441]: Cannot access 'buf' while it is mutably borrowed
    buf = 200

    return 0
}

// EXPECT: error[E0441]:
